--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "express": "^4.21.1",
+    "rapid-draughts": "^1.0.2",
+    "sequelize": "^6.37.4",
+    "sqlite3": "^5.1.7"
+  }
 }
