--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/sequelize": "^4.28.20",
     "sqlite3": "^5.1.7",
     "typescript": "^5.0.0"
   }
