--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
     "rapid-draughts": "^1.0.2",
     "sequelize": "^6.37.4",
@@ -20,7 +21,8 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/sequelize": "^4.28.20",
     "sqlite3": "^5.1.7",
     "typescript": "^5.0.0"
