--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "resolveJsonModule": true
   },
 
-  "include": ["src//*.ts", "src//.js", "types/**/.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.js", "src/types/**/.d.ts"],
 
   "exclude": [
     "node_modules"
