--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "pdfkit": "^0.15.0",
     "pg": "^8.13.0",
     "rapid-draughts": "^1.0.2",
     "sequelize": "^6.37.4",
@@ -23,6 +26,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/pdfkit": "^0.13.5",
     "@types/sequelize": "^4.28.20",
     "sqlite3": "^5.1.7",
     "typescript": "^5.0.0"
