--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "rapid-draughts": "^1.0.2",
     "sequelize": "^6.37.4",
     "sequelize-cli": "^6.6.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
