--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "moment-timezone": "^0.5.46",
     "pdfkit": "^0.15.0",
     "pg": "^8.13.0",
     "rapid-draughts": "^1.0.2",
